Fixed the grid item occupying entire space (they become too wide) when few products remain after filters and also fixed the inconsistent product card issue

--- a/src/styles/ProductCardStyles.css
+++ b/src/styles/ProductCardStyles.css
@@ -60,7 +60,6 @@
     .productCard-container {
         border-radius: 20px;
         height: 100%;
-        max-height: 380px;
     }
     .product-image-wrapper {
         width: 100%;
